--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+#-------------------------------------------------------------------------------
+
+# Downloaded full text articles
+data/
