--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
+branch: all_branches: true
 python:
-  - "3.4"
-  - "3.5"
+    - "3.4"
+    - "3.5"
 install: "pip3 install -r requirements.txt"
+script:
+    nosetests
