Edit gitignore to allow symlinked directories
(removes trailing '/' after directory names so that symlinked directories will
be properly ignored)

--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,10 @@ target/
 #-------------------------------------------------------------------------------
 
 # Downloaded full text articles
-data/
+data
 
 # Program logs
-logs/
+logs
 
 # NER tools
-tools/
+tools
