Adds fuzzy string matching for Bio-NER
Uses fuzzywuzzy package to calculate Levenshtein distance between NER tokens
(as determined by CoreNLP and by PubTator tools)

Ratio threshold can be set by the user in bioshovel_config.json file

--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -1,4 +1,6 @@
 {
     "data_directory": "../../data/corpus/pubtator_abstracts/",
-    "data_tgz": true
+    "data_tgz": true,
+    "fuzzy_ner_match": true,
+    "fuzzy_ratio": 75
 }
