Makes PubTator NER parse/merge user-settable
New boolean parameter added to bioshovel_config.json

--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -1,6 +1,7 @@
 {
     "data_directory": "../../data/corpus/pubtator_abstracts/",
     "data_tgz": true,
+    "parse_pubtator": true,
     "fuzzy_ner_match": true,
     "fuzzy_ratio": 75
 }
