--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -1,5 +1,6 @@
 {
     "data_directory": "../../data/corpus/pubtator_abstracts/",
+    "training_data_directory": "../../data/corpus/pubtator_abstracts/",
     "data_tgz": true,
     "parse_pubtator": true,
     "fuzzy_ner_match": true,
