--- a/src/deepdive/deepdive.conf
+++ b/src/deepdive/deepdive.conf
@@ -7,6 +7,6 @@ deepdive.calibration.holdout_query: """
         FROM chemical_disease_candidate
         WHERE doc_id in (SELECT doc_id
                          FROM articles
-                         WHERE articles.file_source = 'test')) as T
+                         WHERE articles.file_source = 'dev')) as T
      ON has_relation.chem_id = T.chem_id AND has_relation.disease_id = T.disease_id
 """
