--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -1,11 +1,11 @@
 {
-    "data_directory": "../../data/corpus/pubtator_abstracts/",
-    "training_data_directory": "../../data/corpus/pubtator_abstracts/",
+    "data_directory": "../../data/",
+    "training_data_directory": "../../data/",
     "data_tgz": true,
     "parse_pubtator": true,
     "fuzzy_ner_match": true,
     "fuzzy_ratio": 75,
     "min_chunk": 0,
-    "max_chunk": 0,
+    "max_chunk": 2,
     "train_dev_test_ids_json": "../../data/train_dev_test_ids.json"
 }
