Adds check to see if DD installed and DB info
Checks to make sure `deepdive` command is available in $PATH

Creates database based on bioshovel_config.json file's 'database' value

--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -7,5 +7,6 @@
     "fuzzy_ratio": 75,
     "min_chunk": 0,
     "max_chunk": 2,
-    "train_dev_test_ids_json": "../../data/train_dev_test_ids.json"
+    "train_dev_test_ids_json": "../../data/train_dev_test_ids.json",
+    "database_name": "bioshovel"
 }
