Loads training data earlier
Parses from tar file specified in bioshovel_config.json

--- a/src/deepdive/bioshovel_config.json
+++ b/src/deepdive/bioshovel_config.json
@@ -1,6 +1,6 @@
 {
     "data_directory": "../../data/",
-    "training_data_directory": "../../data/",
+    "training_data_tgz": "../../data/biocreative_cdr_training_0_combined.tgz",
     "data_tgz": true,
     "parse_pubtator": true,
     "fuzzy_ner_match": true,
